--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -25,7 +25,7 @@ msgstr "Bienvenue chez Holberton"
 msgid "home_header"
 msgstr "Bonjour monde!"
 
-msgid "logged_in_as %(username)s"
+msgid "logged_in_as"
 msgstr "Vous êtes connecté en tant que %(username)s."
 
 msgid "not_logged_in"
